# snippets-rs

./: .gitattributes  Cargo.toml  README.md
src/: lib.rs
tests/: integration_tests.rs
tests/snippets/: oiutput  snippet_test.snip
