[package]
name = "snippets-rs"
version = "0.1.0"
edition = "2021"
description = "A parser for the snippet file format, a human-readable file format for storing strings"
license = "MIT"
authors = ["Jonas Everaert <jonas.vbs4@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/Jomy10/snippets-rs"
repository = "https://github.com/Jomy10/snippets-rs"
keywords = ["string", "strings", "parser", "text", "store"]
categories = ["parser-implementations"]

[dependencies]
